--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,7 @@
     "name": "paketo/composer_app",
     "require": {
         "vlucas/phpdotenv": "5.3.0",
-        "predis/predis": "2.3.0"
+        "predis/predis": "2.3.0",
+        "nesbot/carbon": "^3.8"
     }
 }
